# ChangeLog for dev-ruby/rspec-core
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-core/ChangeLog,v 1.28 2012/07/15 12:51:49 ago Exp $

  15 Jul 2012; Agostino Sarubbo <ago@gentoo.org> rspec-core-2.6.4-r1.ebuild:
  Stable for amd64, wrt bug #426668

*rspec-core-2.11.0 (15 Jul 2012)

  15 Jul 2012; Hans de Graaff <graaff@gentoo.org> +rspec-core-2.11.0.ebuild:
  Version bump.

  29 Jun 2012; Hans de Graaff <graaff@gentoo.org> rspec-core-2.10.1.ebuild:
  Avoid dependency on git. Add dependency on yard to build documentation since
  that is what is actually used. Avoid Rakefile with all its dependencies when
  building documentation, fixing bug 421669.

*rspec-core-2.10.1 (10 Jun 2012)

  10 Jun 2012; Hans de Graaff <graaff@gentoo.org> +rspec-core-2.10.1.ebuild:
  Version bump. Drop x86 keyword, bug 417587.

  06 May 2012; Kacper Kowalik <xarthisius@gentoo.org> rspec-core-2.6.4.ebuild:
  ppc64 stable wrt #369573

  02 Mar 2012; Naohiro Aota <naota@gentoo.org> rspec-core-2.6.4-r1.ebuild:
  Add ~x86-fbsd

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> rspec-core-2.6.4-r1.ebuild:
  Add Prefix keywords, bug #396547

*rspec-core-2.6.4-r1 (28 Dec 2011)

  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> rspec-core-2.6.4.ebuild,
  +rspec-core-2.6.4-r1.ebuild:
  Revision bump to drop ruby19 from stable version.

  02 Oct 2011; Raúl Porcel <armin76@gentoo.org> rspec-core-2.6.4.ebuild:
  ia64/sparc stable wrt #369573

  19 Sep 2011; Markus Meier <maekke@gentoo.org> rspec-core-2.6.4.ebuild:
  x86 stable, bug #369573

  19 Sep 2011; Hans de Graaff <graaff@gentoo.org> -rspec-core-2.5.1.ebuild:
  Remove old version.

  14 Sep 2011; Jeroen Roovers <jer@gentoo.org> rspec-core-2.6.4.ebuild:
  Stable for HPPA (bug #369573).

  27 Aug 2011; Fabian Groffen <grobian@gentoo.org> rspec-core-2.6.4.ebuild:
  Marked ~x64-macos

  25 Aug 2011; Hans de Graaff <graaff@gentoo.org> rspec-core-2.6.4.ebuild: