@@ -1,24 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX rspec-core-2.4.0-tests.patch 1723 SHA256 05accc191c798941e4918701b22ed5defce97460f32da96141ecb67486aee99f SHA512 7974409e1c82d7b94082a0b5cc51cac392c2b465da414efd11b38ab5c85e845d8cb655ca993e4f6f3aae941bdc2ff5ba483742d0c84fe99e72f8a5440cdbd6ee WHIRLPOOL 08d43ae4d917d3166341c6f68909b65a7181c870b13c24a129971a46c91487a9bdc162a5698771ff0e545a24177fa9566e1a0d2110650be79430291d84bdc366
 DIST rspec-core-2.10.1-git.tgz 150158 SHA256 393899dd493af4e5e19daf27b3ed8840d477d2756513836a91dbd0cd75045185 SHA512 87b46fe493829cbcc6d8c34089e2a2b16a362102d25f2a5854caa4495155dd1a6f5bb0b5fb37d7fe6471e5d34716d80bcf4c9a4e06fcf4181a18fc0eef942f32 WHIRLPOOL e505ab4dd7ef4540116ec5ac80dea1af01fff943bcd19b3599e22657d71943166ee6ab0fdab964d332cbc7eee6c81c1ad8376fb5931b9dda0105486e8451ec1d
 DIST rspec-core-2.11.0-git.tgz 153631 SHA256 8b75afca838ef53e041bf5c37fbdc94cfd11e08a1118b9a1c5456563fe5dc2f1 SHA512 d349d4ca1c5ce25ec692f01398755d6c8a808540f296f35a9b65117c2c85c066987d4fca83ccdd8bb42dcad4917d2a5f54b64b817199663a8bdb6173c4b4187b WHIRLPOOL 9633c34baa09b566a812d0b3ff24916504bc73d7a9599417c2461ae681045dc27d16dd2af01e09e1ef59793ca9cd63d38e8b30c2a93696ca63d4902a8e05f9e0
+DIST rspec-core-2.11.1-git.tgz 154202 SHA256 efb1423943fd4dea19e6c22909d525dce9f77449d2e6bd983d0465d39854219b SHA512 52dde93ad7ce1ee2411199e9f2dad070dbacce52080c964d7c02b87170f26f5f8282c7a406a03be03239b0bb3c06c090d6f5718de1895f636b118169874460b4 WHIRLPOOL 5426b463e56c039a27273928ecc1552e01fb1ce87c9271de301795c2f3e4bd5d8243f8d4b9b18128205c301e361e7cfcc27d19dd1a980b5a0e202c05670bd184
 DIST rspec-core-2.6.4.gem 122368 SHA256 9d41146ee85fc8177d54331d72dfcd9ea71df41ed5d62bdbc1a027be496d903c SHA512 c9990ec808cec9a76d609cb4301f78e1713ed22fb7f44d4e09f9f03b6a3a644462b4b3afa520037dcf2b960be52b405ddabb0ae5028d5d910045f4eaff93a91a WHIRLPOOL 773365483a7e0164061983983af4f6a8faee4a52d0d5125fe887a0a2f67e4891692ef0670baa5ce7b7e0624a69efa68fb9e4f564e1d4d89e6727fa940c0b750f
 EBUILD rspec-core-2.10.1.ebuild 2983 SHA256 239239493092478bf8175d1c4f32e66da5d9e7fb550be8b610a86c74cdc07cd9 SHA512 107a8831d85a586407f1da3fc6bb231094bae00d672ed942b84216579cc40ceabde2c38a5a7de926568c1ed4105aa8feef7d1fa1bcbc23a384342ec924517446 WHIRLPOOL f0a1d1da510f830feb59e47d2c8b6b790b373a7c797993be47534c9a80bac4790c56e37493f5b39b01126122a0909a50874de200e716b2db2a11da04752f3a74
 EBUILD rspec-core-2.11.0.ebuild 2819 SHA256 c735764350086283d21c0adc723d180af8fec9edac009470f17308b8285a3b9c SHA512 d8db29fcd1de61f534965d7062d953465a6d5a57a8be4f3ca6c3e8f2ce79d071dff37ddfc2f44f69e0fa6e0e7ed28938577a2b935c78321651835cac1ec41263 WHIRLPOOL 5774e4811c5b3fd03df9e7ceef27248459e7b14b2d414e33da216c7066ab8d5ac2adca35e83471b941a28b42c4907b86f13794d3855af4006e9ac1a4a10036e4
+EBUILD rspec-core-2.11.1.ebuild 2631 SHA256 7b454dad0ab81759c1c37f3ffaea41bad8d1e40c77f177764821a96678189396 SHA512 74889e61626996ae19b9e7bcde9a6a88547feb478118b7b019516068338968897a4a8729de77b5ce27b3b97121a5b63ac6aebfdcc812d87a9ae4a59c1e965f7e WHIRLPOOL 101f94e9fded205f2f53868258b82a8b0ff658142e945a4d29e90401a9f1a32e70610247bf191e2fb9cf7617ae7f850d7cf2e2d332a692046e4bba16e0f9adc4
 EBUILD rspec-core-2.6.4-r1.ebuild 2289 SHA256 6d10cd4a54b54adc42bcb4c01e3a118c1cb5a0260a9331f79f21f98bb9c02144 SHA512 712d584c2bd61e7d91fc8e54f5d94c348693b22f09a521624273e1024381511191d3b0d3cd0403323a7ec55b9010fa712ebcecdc1737f983e79599d124d62340 WHIRLPOOL 924ddfef7b60441d1cb0b019c5199b82a99c1b5023398f159310b13de2553a22096020fd81b1fec82826daf1122c09ce14edc0d6e7bb5246106ab7b4dd7b5edc
 EBUILD rspec-core-2.6.4.ebuild 2239 SHA256 fd55da69fb4cd5252eeee1cc0705683ed704dc549901c2253a134f81bcdcc820 SHA512 8395d6fae869c34a6c428c347e24cc51c9b0bb0d86c60f3ba6a3f61c0a06fe70ae88b88f762fdc219a10d181f7ab7e665b27e541ba2c4701db5aae32eadbaf6f WHIRLPOOL d1a654fbd25da75913415a329f2f3c4fd08d0950acf6bbfd725cea5f2ee9ca39caa2017c1c99bcdbd01369c6c73de5e52acf1d0c858f7f41bb09948ac8d64ea9
-MISC ChangeLog 3872 SHA256 1dbefa0d52b4039f8a4bb601b737fb49a4759232799e479977ee954db1b3e91e SHA512 32888b832698b5d33d351166a49f4ee219402194f8aaa9594d2f7dcc73f0e8e8c7e6c5fbbef9e7b435003c3bfdb8958c32c09d3886ab8ec7892a202d62767b48 WHIRLPOOL 7330edb12fb65cb87bba279ee318eaf4328e8e7ade0e4aa0f5e4a19181fa85ba15ff479f06a0804eb16d8624d6d045a6877807544c6e52a8a3611903eb4e2b09
+MISC ChangeLog 4003 SHA256 d0c62035671519b39bd4ccd15aa35df5c2b5ece3111977e398b387565b3a5e71 SHA512 3d6521970dd686baae8816a23a0fc5600793b0a94b6fabad9fbd743f9dc9ad91aeb457f9f2689a1180470f5b3c31e01dbce6de7b446f99e4b253f80687f66882 WHIRLPOOL 6ff70671feef28f68603c543c8fcea4f36bdeaaede2fa785b68870cb9f763164a87456a54b523d74cb8135a40260ab0c83573cbe57890d10408686e9b9756dbe
 MISC metadata.xml 158 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032 SHA512 a9ab7b665b00f8a0619ffb3cf5260438a6f47fe997bc9cfbd5410d074b92e473dd1484d79a4afd736f52dc1277af42f6439953c696c35a92c75d94f4eb591baa WHIRLPOOL e8e518ad3cc7f0230aa7a43b82e730310527bd3b22033f13563a7c0630668bb0fa935ce64a3345c84b3fa2623fd14697c2ae0289266ae1fbc97bf032133a4aa6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEbBAEBCgAGBQJQArzrAAoJEOTDgjZ80txd98wH+NAeZsJn25SDezsStySbfH5O
-vLPWlRhJdhbv9gMmb5TFAqfLQP7NH/K21OZb13aa3bQW4UWQTQE4gdt1WQGLxNjT
-OBijpHcSO2xFd1z55vtru/8ph+s6c1/R0mGh2vR7PQJ2ENAKzIFyidqhIDZOxFup
-exr3eYSWOZFtshSlvRSAs2q9j7MmHcWLxMYLG5KnkmNcPDbWkgB4G/z6Z3y50DS1
-eXaoo3w/H1Z1GqfqJkeNhvXLSumiG9DkrpiuzSRlFraT+wX402ZbT/e2wVVdwtwl
-FiimpX5ZZIfjdajWIT/052hHUuM6wd0EJQ6O//dac2L0H/PFBDyUV2Wo+4MQCA==
-=fHGz
+iF4EAREIAAYFAlAHpbQACgkQiIP6VqMIqNdxQAD/YZv9lYZU6cH4ywvlnsDHH1MJ
+6xys2u4h4oSP6Tfqdn8A/AvE6vgBQ7ZB3C7dreBRJehU04LdTmsWPo8SPe8HGj3C
+=vIel
 -----END PGP SIGNATURE-----
