@@ -1,0 +1,80 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-core/rspec-core-2.11.1.ebuild,v 1.1 2012/07/19 06:13:59 graaff Exp $
+
+EAPI=4
+USE_RUBY="ruby18 ree18 ruby19 jruby"
+
+RUBY_FAKEGEM_TASK_TEST="none"
+RUBY_FAKEGEM_TASK_DOC="none"
+
+RUBY_FAKEGEM_EXTRADOC="Changelog.md README.md"
+
+# Also install this custom path since internal paths depend on it.
+RUBY_FAKEGEM_EXTRAINSTALL="exe"
+
+RUBY_FAKEGEM_GEMSPEC="rspec-core.gemspec"
+
+inherit ruby-fakegem
+
+DESCRIPTION="A Behaviour Driven Development (BDD) framework for Ruby"
+HOMEPAGE="http://rspec.rubyforge.org/"
+SRC_URI="https://github.com/rspec/${PN}/tarball/v${PV} -> ${P}-git.tgz"
+RUBY_S="rspec-${PN}-*"
+
+LICENSE="MIT"
+SLOT="2"
+KEYWORDS="~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="${RDEPEND} !<dev-ruby/rspec-1.3.1-r1"
+
+ruby_add_bdepend "test? (
+		>=dev-ruby/nokogiri-1.5.2
+		dev-ruby/syntax
+		>=dev-ruby/fakefs-0.4.0
+		>=dev-ruby/zentest-4.6.2
+		dev-ruby/rspec-expectations:2
+		dev-ruby/rspec-mocks:2
+	)"
+ruby_add_bdepend "doc? ( dev-ruby/yard )"
+
+all_ruby_prepare() {
+	# Don't set up bundler: it doesn't understand our setup.
+	sed -i -e '/[Bb]undler/d' Rakefile || die
+
+	# Remove the Gemfile to avoid running through 'bundle exec'
+#	rm Gemfile || die
+
+	# Avoid dependency on cucumber since we can't run the features anyway.
+	sed -i -e '/[Cc]ucumber/ s:^:#:' Rakefile || die
+
+	# Also clean the /usr/lib/rubyee path (which is our own invention).
+	sed -i -e 's#lib\\d\*\\/ruby\\/#lib\\d*\\/ruby(ee|)\\/#' lib/rspec/core/configuration.rb || die
+
+	# Remove jruby-specific comparison documents since for us the normal
+	# version passes.
+	cp spec/rspec/core/formatters/text_mate_formatted-1.8.7.html spec/rspec/core/formatters/text_mate_formatted-1.8.7-jruby.html|| die
+
+	# Duplicate exe also in bin. We can't change it since internal stuff
+	# also depends on this and fixing that is going to be fragile. This
+	# way we can at least install proper bin scripts.
+	cp -R exe bin || die
+
+	# Avoid unneeded dependency on git.
+	sed -i -e '/git ls-files/ s:^:#:' rspec-core.gemspec || die
+
+	# Avoid aruba dependency so that we don't end up in dependency hell.
+	sed -i -e '/aruba/ s:^:#:' -e '74,76 s:^:#:' spec/spec_helper.rb || die
+	rm spec/command_line/order_spec.rb || die
+}
+
+all_ruby_compile() {
+	if use doc ; then
+		yardoc || die
+	fi
+}
+
+each_ruby_test() {
+	PATH="${S}/bin:${PATH}" RUBYLIB="${S}/lib" ${RUBY} -Ilib bin/rspec spec || die "Tests failed."
+}
